Change title and content for Amazon Clone

--- a/public/index.html
+++ b/public/index.html
@@ -1,53 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Zomato Clone</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Amazon Clone</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Hero Section -->
-  <header class="hero">
-    <nav class="navbar">
-      <div class="left">Get the App</div>
-      <div class="right">
-        <a href="#">Investor Relations</a>
-        <a href="#">Add restaurant</a>
-        <a href="#">Log in</a>
-        <a href="#">Sign up</a>
-      </div>
-    </nav>
+  <!-- Header -->
+  <header class="navbar">
+    <div class="logo">amazon</div>
 
-    <div class="hero-content">
-      <h1>zomato</h1>
-      <p>Discover the best food & drinks in Patna</p>
+    <div class="search-box">
+      <input type="text" placeholder="Search Amazon">
+      <button>Search</button>
+    </div>
 
-      <div class="search-box">
-        <input type="text" placeholder="Chennai" />
-        <input type="text" placeholder="Search for restaurant, cuisine or a dish" />
-      </div>
+    <div class="nav-links">
+      <span>Hello, Sign in</span>
+      <span>Returns & Orders</span>
+      <span>Cart</span>
     </div>
   </header>
 
-  <!-- Cards Section -->
-  <section class="cards">
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1" />
-      <h3>Dining</h3>
-      <p>View the city's favourite dining venues</p>
+  <!-- Banner -->
+  <section class="banner">
+    <h1>Welcome to Amazon</h1>
+    <p>Shop electronics, fashion, home & more</p>
+  </section>
+
+  <!-- Products -->
+  <section class="products">
+    <div class="product-card">
+      <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8">
+      <h3>Laptop</h3>
+      <p>₹55,999</p>
+      <button>Add to Cart</button>
     </div>
 
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836" />
-      <h3>Nightlife</h3>
-      <p>Explore the city's top nightlife outlets</p>
+    <div class="product-card">
+      <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e">
+      <h3>Headphones</h3>
+      <p>₹2,999</p>
+      <button>Add to Cart</button>
     </div>
 
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c" />
-      <h3>Order Online</h3>
-      <p>Stay home and order to your doorstep</p>
+    <div class="product-card">
+      <img src="https://images.unsplash.com/photo-1585386959984-a4155222f2c1">
+      <h3>Smart Watch</h3>
+      <p>₹4,499</p>
+      <button>Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="https://images.unsplash.com/photo-1580910051074-7c7c34b1fa0f">
+      <h3>Shoes</h3>
+      <p>₹1,999</p>
+      <button>Add to Cart</button>
     </div>
   </section>
 
