Refactor HTML structure and update elements

--- a/public/index.html
+++ b/public/index.html
@@ -1,73 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Amazon Clone</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- TOP NAVBAR -->
-  <header class="top-nav">
-    <div class="logo">amazon<span>.in</span></div>
+  <!-- Header -->
+  <header class="navbar">
+    <div class="logo">amazon</div>
 
-    <div class="location">
-      Deliver to <b>Sravan</b><br>
-      Vijayawada 522501
+    <div class="search-box">
+      <input type="text" placeholder="Search Amazon">
+      <button>Search</button>
     </div>
 
-    <div class="search">
-      <select>
-        <option>All</option>
-      </select>
-      <input type="text" placeholder="Search Amazon.in">
-      <button>🔍</button>
-    </div>
-
-    <div class="nav-right">
-      <div>Hello, Sravan<br><b>Account & Lists</b></div>
-      <div>Returns<br><b>& Orders</b></div>
-      <div class="cart">🛒 Cart</div>
+    <div class="nav-links">
+      <span>Hello, Sign in</span>
+      <span>Returns & Orders</span>
+      <span>Cart</span>
     </div>
   </header>
 
-  <!-- SUB NAV -->
-  <nav class="sub-nav">
-    <span>☰ All</span>
-    <span>Fresh</span>
-    <span>Amazon Pay</span>
-    <span>Gift Cards</span>
-    <span>Buy Again</span>
-    <span>Today's Deals</span>
-    <span>Prime</span>
-  </nav>
-
-  <!-- HERO BANNER -->
-  <section class="hero">
-    <h1>Lifetime Free Credit Card</h1>
-    <p>Apply now & get welcome rewards worth ₹2,500</p>
+  <!-- Banner -->
+  <section class="banner">
+    <h1>Welcome to Amazon</h1>
+    <p>Shop electronics, fashion, home & more</p>
   </section>
 
-  <!-- SHOP SECTIONS -->
-  <section class="shop">
-    <div class="box">
-      <h2>Pick up where you left off</h2>
-      <img src="https://images.unsplash.com/photo-1585386959984-a4155222f2c1">
-    </div>
-
-    <div class="box">
-      <h2>Continue shopping deals</h2>
-      <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e">
-    </div>
-
-    <div class="box">
-      <h2>Buy again</h2>
+  <!-- Products -->
+  <section class="products">
+    <div class="product-card">
       <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8">
+      <h3>Laptop</h3>
+      <p>₹55,999</p>
+      <button>Add to Cart</button>
     </div>
 
-    <div class="box">
-      <h2>Amazon Business</h2>
-      <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30">
+    <div class="product-card">
+      <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e">
+      <h3>Headphones</h3>
+      <p>₹2,999</p>
+      <button>Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="https://images.unsplash.com/photo-1585386959984-a4155222f2c1">
+      <h3>Smart Watch</h3>
+      <p>₹4,499</p>
+      <button>Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="https://images.unsplash.com/photo-1580910051074-7c7c34b1fa0f">
+      <h3>Shoes</h3>
+      <p>₹1,999</p>
+      <button>Add to Cart</button>
     </div>
   </section>
 
